# rust-lang-project-harness

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  development.md  devenv.nix
.codex/: config.toml  harness-policy.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: query_search.microbench.json  query_search_microbench.rs
docs/: 00_overview.md  downstream-verification-gate.md  index.md
docs/01_core/: 101_harness_boundary.md
docs/03_features/: 201_rule_catalog.md  202_runner_modes.md  203_cli.md  204_verification_policy.md  205_scenario_benchmark_framework.md  206_agent_first_downstream_scenario_benchmark_gate.md
docs/04_research/: 2026-05-01-rust-ecosystem-policy-survey.md
provider/: asp-provider-manifest.json  asp-provider-workspace-install.json
rs-harness/: Cargo.toml
rs-harness/src/: lib.rs  test_attribute.rs
schemas/: rust-ast-patch-real-project-evidence.v1.schema.json  rust-semantic-capabilities.v1.schema.json  semantic-agent-hook-decision.v1.schema.json  semantic-compare-packet.v1.schema.json  semantic-language-registry.v1.schema.json  semantic-native-syntax-fact-index.v1.schema.json  semantic-query-packet.v1.schema.json  semantic-search-packet.v1.schema.json
skills/: README.md  SKILL.org
skills/rust-harness-policy/: SKILL.md
skills/rust-verification-performance/: SKILL.md
skills/rust-verification-profile/: SKILL.md
src/: agent_snapshot.rs  build_gate.rs  cli.rs  discovery.rs  downstream_gate_guide.rs  harness-rules.md  harness_rules.rs  invariant_catalog.rs  lib.rs  macros.rs  model.rs  parser.rs  path.rs  render.rs  runner.rs  self_policy.rs  workspace_evidence_graph.rs
src/build_gate/: cache.rs  dependency_baseline.rs  downstream.rs  guidance.rs  mod.rs  policy.rs  receipt.rs  rerun.rs  support.rs  verification_gate.rs
src/cli/: agent_assets.rs  agent_hooks.rs  agent_registry.rs  ast_patch.rs  behavior_snapshot.rs  determinism_readiness.rs  dev_command_log.rs  evidence_graph.rs  execution_receipt.rs  flow_lite_query.rs  formal_proof_pilot.rs  language_projection.rs  mod.rs  query.rs  query_options.rs  query_source.rs  query_window.rs  review_packet.rs  runner.rs  runner_support.rs  search_output.rs  search_plan.rs  search_trace.rs  (+13 more)
tests/: query_workspace_contract.rs  unit_test.rs
(+770 files in other folders)
