[package]
name = "rust-lang-project-harness"
version = "0.1.0"
edition = "2024"
description = "Project-level Rust language harness with compact diagnostics for agents"
authors = ["CyberXiuXian Artisan workshop"]
license = "Apache-2.0"
publish = false

[dependencies]
cargo_toml = "0.22.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["extra-traits", "full", "parsing", "visit"] }
toml = "1.1"

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
doc_markdown = "warn"
