[package]
name = "rs-harness"
version = "0.1.0"
edition = "2024"
description = "Attribute macros for Rust language project harness tests"
authors = ["CyberXiuXian Artisan workshop"]
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "3", features = ["full", "parsing"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
doc_markdown = "warn"
